@@ -1,3 +1,7 @@
+2008-07-23  Ian Lance Taylor  <iant@google.com>
+
+	* gcc.target/i386/20080723-1.c: New test.
+
 2008-07-22  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	* lib/target-supports.exp (check_effective_target_spu_auto_overlay):
